# pynsgr

./: .gitignore  CHANGES.txt  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
example/: Readme.txt.old  testInput.properties  testParam.properties
example/example_dir/: example.py
pynsgr/: client.py  commands.py  pyjavaproperties.py
pynsgr/commands/: nsgr_job.py  nsgr_submit.py
pynsgr/examples/test_dir/: testInput.properties  testParam.properties
python_cipres/: client.py
